fixed text alignment on photobit comments

--- a/yb_bits/static/css/yb_bits/yb_bits.css
+++ b/yb_bits/static/css/yb_bits/yb_bits.css
@@ -495,6 +495,10 @@
     filter: drop-shadow(0px 0px 1px rgba(0, 0, 0, 0.5));
 }
 
+.comment-body {
+    text-align: left !important;
+}
+
 .yb-comment-photo.right {
     position: absolute;
     left: -32px;
